# fates-of-olympus

./: cards.json  cli.py  fates of olympus cards.tsv  ideologies.tsv  simulate_games.py
.github/workflows/: deploy.yml
engine/: __init__.py  cards.py  effects.py
old-python-engine/: .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
old-python-engine/engine/: cards.py  controller.py  events.py  models.py  rules.py  types.py
scripts/: resize-cards.sh
tests/: __init__.py  test_effects.py  test_engine.py
web/: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: 404.html
web/scripts/: generate-pwa-icons.js
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/ai/: greedy.ts
web/src/components/: InstallPrompt.tsx  LoadingScreen.tsx  UpdateNotification.tsx
web/src/components/game/: Board.tsx  BuffDebuffAnimation.tsx  Card.tsx  CardDestroyedAnimation.tsx  (+7 more)
web/src/engine/: cards.ts  controller.test.ts  controller.ts  effects.test.ts  effects.ts  events.ts  harpies_verify.test.ts  index.ts  kobaloi_verify.test.ts  models.ts  progression.ts  rng.ts  starterDeck.ts  systematic_effects.test.ts  types.ts
web/src/pages/: CardReveal.tsx  Collection.tsx  Game.tsx  Home.tsx
web/src/storage/: index.ts  localStorage.ts  types.ts
web/src/store/: gameStore.test.ts  gameStore.ts  playerStore.ts
web/src/styles/: globals.css
web/src/test/: setup.ts
web/src/tutorial/: TutorialMatch.ts  TutorialPrompt.tsx  tutorialStore.ts
web/src/utils/: assets.ts
(+12 files in other folders)
